added section ffooter

--- a/index.html
+++ b/index.html
@@ -196,6 +196,39 @@
 
 
 
+    <!--------------- FOOTER SECTION------------------>
+
+        <section id="footer">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L26.7,117.3C53.3,139,107,181,160,202.7C213.3,224,267,224,320,197.3C373.3,171,427,117,480,128C533.3,139,587,213,640,245.3C693.3,277,747,267,800,229.3C853.3,192,907,128,960,96C1013.3,64,1067,64,1120,90.7C1173.3,117,1227,171,1280,202.7C1333.3,235,1387,245,1413,250.7L1440,256L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
+
+                <div class="container"> 
+                    <div class="row">
+                        <div class="col-md-4 f-box">
+                            <h4>LOGO</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae cupiditate laudantium voluptatum deserunt, aspernatur beatae fugit molestiae quidem fuga, quam laborum laboriosam perferendis illo perspiciatis dicta aliquid vel, delectus excepturi!</p>
+                        </div>
+
+                        <div class="col-md-4 f-box">
+                            <p><b>CONTACT US</b></p>
+                            <p><i class="fa fa-map-marker"></i> New Jersey</p>
+                            <p><i class="fa fa-phone"></i> +1 125 478 665</p>
+                            <p><i class="fa fa-envelope"></i> email@email.com</p>
+                        </div>
+
+                        <div class="col-md-4 f-box">
+                            <p><b>SUBSCRIBE NEWSLETTER</b></p>
+                            <input type="email" class="form-control" placeholder="Your Email">
+                            <button type="button" class="btn btn-light">Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+                
+
+        </section>
+
+
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
