added section social

--- a/index.html
+++ b/index.html
@@ -146,14 +146,16 @@
                         <div class="carousel-inner">
                         <div class="carousel-item active">
                             <p class="client-desc">To jest opinia pierszego Klienta</p>
+                            <img src="../LandingPage4/img/opinie1.jpg">
                             <h3 class="client-name">Tomasz Nowak</h3>
                         </div>
                         <div class="carousel-item">
-                            <p class="client-desc">Lorem Ipsum . To jest opinia drugiego Klienta</p>
-
+                            <p class="client-desc">Lorem Ipsum Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, repudiandae adipisci incidunt, eius veniam eveniet quas deleniti provident hic, totam aliquam reiciendis natus vitae autem consequuntur nemo doloribus dolores unde!. To jest opinia drugiego Klienta</p>
+                            <h3 class="client-name">Bartosz Kowalski</h3>
                         </div>
                         <div class="carousel-item">
                             <p class="client-desc">Lorem ipsum dolores. To jest opinia trzeciego Klienta</p>
+                            <h3 class="client-name">Andrzej Włodarski</h3>
                         </div>
                         </div>
                         <br>
@@ -172,6 +174,26 @@
             </div>
 
     </section>
+
+
+      <!--------------- SOCIAL SECTION------------------>
+
+      <section id="social">
+        <div class="container text-center">
+            <h1 class="title">Find us on social media</h1>
+        
+        <div class="social-icon">
+            <a href="#"><img src="../LandingPage4/img/social/social-be.jpg"></a>
+            <a href="#"><img src="../LandingPage4/img/social/social-fb.jpg"></a>
+            <a href="#"><img src="../LandingPage4/img/social/social-in.jpg"></a>
+            <a href="#"><img src="../LandingPage4/img/social/social-inst.jpg"></a>
+            <a href="#"><img src="../LandingPage4/img/social/social-pint.jpg"></a>
+            <a href="#"><img src="../LandingPage4/img/social/social-tw.jpg"></a>
+            <a href="#"><img src="../LandingPage4/img/social/social-yt.jpg"></a>
+        </div>
+    </div>
+    </section>
+
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
